--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,9 @@ long_description=file: README.rst
 long_description_content_type=text/x-rst
 license=MPL 2.0
 license_file=LICENCE
-url=https://github.com/NiftyPET/niftyml
+url=https://github.com/NiftyPET/NiftyML
 project_urls=
-    Changelog=https://github.com/NiftyPET/niftyml/releases
+    Changelog=https://github.com/NiftyPET/NiftyML/releases
 author=Casper da Costa-Luis
 author_email=imaging@cdcl.ml
 keywords=PET, ML
