--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,17 @@
 [metadata]
 name=niftyml
-description=PET-MR Machine Learning
+description=PET-MR with Machine Learning
 long_description=file: README.rst
 long_description_content_type=text/x-rst
 license=MPL 2.0
 license_file=LICENCE
-url=https://github.com/NiftyPET/NiftyML
+url=https://nifty.ml
 project_urls=
     Changelog=https://github.com/NiftyPET/NiftyML/releases
+    Source=https://github.com/NiftyPET/NiftyML
 author=Casper da Costa-Luis
 author_email=imaging@cdcl.ml
-keywords=PET, ML
-provides=niftypet.ml
+keywords=PET, MR, ML, Machine Learning
 classifiers=
     Development Status :: 4 - Beta
     Intended Audience :: Developers
@@ -31,8 +31,8 @@ classifiers=
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
 [options]
-python_requires=>=3.6
 install_requires=numpy
+python_requires=>=3.6
 packages=find:
 [options.extras_require]
 dev=
@@ -70,11 +70,9 @@ exclude=.git,__pycache__,build,dist,.eggs
 timeout=30
 log_level=INFO
 python_files=tests/test_*.py
-addopts=-v --tb=short -rxs -W=error --durations=0 --durations-min=1 --cov=niftypet.ml --cov-report=term-missing --cov-report=xml
+addopts=-v --tb=short -rxs -W=error --durations=0 --durations-min=1 --cov=niftypet --cov-report=term-missing --cov-report=xml
 
 [coverage:run]
 branch=True
-include=niftypet/ml/*
-relative_files=True
 [coverage:report]
 show_missing=True
