--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Run setup-python
-      run: setup-python -p${{ matrix.python }}
+      run: setup-python -p${{ matrix.python }} tensorflow-gpu
     - run: pip install -U -e .[dev]
     - run: pytest
     - run: codecov
