--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
   - id: todo
     name: Check TODO
     language: pygrep
-    entry: TODO
+    entry: '\bTODO\b'
     types: [text]
     exclude: ^(.pre-commit-config.yaml|.github/workflows/test.yml)$
     args: [-i]
